--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -3,11 +3,14 @@
   background-color: #efefef;
   padding: 7px 7px 7px 10px;
   border: 1px solid #ddd;
+  margin: 1px auto 1px auto;
+  width 99%;
   -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
   -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
   box-shadow: 3px 3px rgba(0,0,0,0.1);
   margin: 20px 0 20px 0;
- /* overflow: scroll; */
+  white-space: nowrap;
+  overflow: auto;
 }
 
 code {
