--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,7 +1,7 @@
 /* Configure line number options */
 .gl { 
   background: #fafafa;
-  border-right: 10px solid #ddd;
+  border-right: 10px solid #efefef;
   color: #999;
   
   /* Stop line numbers being visually selected */
@@ -16,7 +16,7 @@
 .highlight {
   background-color: #efefef;
   padding: 7px 7px 7px 10px;
-  border: 10px solid #ddd;
+  border: 1px solid #ddd;
   -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
   -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
   box-shadow: 3px 3px rgba(0,0,0,0.1);
