--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,7 +1,7 @@
 /* Configure line number options */
 .gl { 
   background: #fafafa;
-  border-right: 10px solid #efefef;
+  border-right: 10px solid #FF00FF;
   color: #999;
   
   /* Stop line numbers being visually selected */
