Customized syntax highlighting Pushed syntax highlighting from css/syntax.css to _sass/_highlights.scss. My custom colors are now defined in _sass_variables.scss

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,6 +6,32 @@
 // Colors
 $blue: #4183C4;
 
+//Evan's custom colors
+$ec_darkred: #b30000;
+$ec_lightred: #ff3333;
+
+$ec_darkorange: #cc5200;
+$ec_lightorange: #ff9900;
+
+$ec_lightyellow: #ffcc00;
+$ec_darkyellow: #b38600;
+
+$ec_darkgreen: #004d00;
+$ec_lightgreen: #00b300;
+
+$ec_darkblue: #000080;
+$ec_lightblue: #0059b3;
+
+$ec_darkpurple: #660066;
+$ec_lightpurple: #ff0080;
+//$ec_lightpurple: #e600e6;
+
+$ec_darkteal: #002533;
+$ec_lightteal: #00a8e6;
+
+$ec_darkgray: #595959;
+$ec_lightgray: #d9d9d9;
+
 // Grays
 $black: #000;
 $darkerGray: #222;
