--- a/style.scss
+++ b/style.scss
@@ -275,7 +275,7 @@ nav {
   margin-top: 50px;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
-  background-color: #2F4F4F;
+  background-color: $ec_darkteal;
 }
 
 footer {
