--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -8,7 +8,7 @@ $blue: #4183C4;
 
 //Evan's custom colors
 $ec_darkred: #b30000;
-$ec_lightred: #ff3333;
+$ec_lightred: #e60000;
 
 $ec_darkorange: #cc5200;
 $ec_lightorange: #ff9900;
