--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -31,7 +31,7 @@ code {
 .highlight .c { color: $ec_lightgreen; font-style: italic  } /* Comment */
 .highlight .err { color: $ec_lightyellow; font-weight: bold  } /* Error */
 .highlight .g { color: $ec_lightgreen } /* Generic */
-.highlight .k { color: $ec_lightpurple; font-weight: bold  } /* Keyword */
+.highlight .k { color: $ec_darkpurple; font-weight: bold  } /* Keyword */
 .highlight .l { color: $ec_darkgreen; font-weight: bold  } /* Literal */
 .highlight .n { color: $ec_lightgray } /* Name */
 .highlight .o { color: $ec_lightorange } /* Operator */
