--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -23,7 +23,7 @@ $ec_darkblue: #000080;
 $ec_lightblue: #0059b3;
 
 $ec_darkpurple: #660066;
-$ec_lightpurple: #ff0080;
+$ec_lightpurple: #cc0066;
 //$ec_lightpurple: #e600e6;
 
 $ec_darkteal: #002533;
