--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -35,7 +35,7 @@ code {
 .highlight .l { color: $ec_darkgreen; font-weight: bold  } /* Literal */
 .highlight .n { color: $ec_lightgray } /* Name */
 .highlight .o { color: $ec_lightorange } /* Operator */
-.highlight .x { color: $ec_darkpurple; font-weight: bold  } /* Other */
+.highlight .x { color: $ec_lightpurple; font-weight: bold  } /* Other */
 .highlight .p { color: $ec_lightgray } /* Punctuation */
 .highlight .cm { color: #586E75 } /* Comment.Multiline */
 .highlight .cp { color: $ec_lightpurple } /* Comment.Preproc */
