--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -30,7 +30,7 @@ $ec_darkteal: #002533;
 $ec_lightteal: #00a8e6;
 
 $ec_darkgray: #595959;
-$ec_lightgray: #d9d9d9;
+$ec_lightgray: #e6e6e6;
 
 // Grays
 $black: #000;
