--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -8,7 +8,7 @@ $blue: #4183C4;
 
 //Evan's custom colors
 $ec_darkred: #b30000;
-$ec_lightred: #cc0000;
+$ec_lightred: #e60000;
 
 $ec_darkorange: #cc5200;
 $ec_lightorange: #ff9900;
@@ -23,8 +23,7 @@ $ec_darkblue: #000080;
 $ec_lightblue: #0059b3;
 
 $ec_darkpurple: #660066;
-$ec_lightpurple: #cc0066;
-//$ec_lightpurple: #e600e6;
+$ec_lightpurple: #e60073;
 
 $ec_darkteal: #002533;
 $ec_lightteal: #00a8e6;
